--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cloud_firestore: ^0.16.0
   firebase_core: ^0.7.0
   firebase_storage: ^7.0.0
+  flutter_staggered_grid_view:
  
 
 dev_dependencies:
