choose image topek

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_storage: ^7.0.0
   flutter_staggered_grid_view:
+  image_picker: ^0.6.7+14
+  transparent_image: ^1.0.0
  
 
 dev_dependencies:
