--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.6.7+14
   transparent_image: ^1.0.0
   geolocator : ^5.1.5
+  sizer: ^1.1.8
  
 
 dev_dependencies:
