--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   image_picker: ^0.6.7+14
   transparent_image: ^1.0.0
   geolocator : ^5.1.5
-  sizer: ^1.1.8
+  cached_network_image: ^2.5.0
+
  
 
 dev_dependencies:
