--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   transparent_image: ^1.0.0
   geolocator : ^5.1.3
   cached_network_image: ^2.5.0
+  wallpaper_manager: ^1.0.10
+  flutter_cache_manager: ^2.1.1
+  image_cropper: ^1.3.1
 
   sizer: ^1.1.8
   local_auth: ^0.6.1
