--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_cache_manager: ^2.1.1
   image_cropper: ^1.3.1
   local_auth: ^0.6.1
+  dio: ^3.0.10
+  path_provider: ^1.6.27
+
+  
 
   
  
