--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,12 @@ dependencies:
   cached_network_image: ^2.5.0
   wallpaper_manager: ^1.0.10
   flutter_cache_manager: ^2.1.1
-  image_cropper: ^1.3.1
   local_auth: ^0.6.1
   dio: ^3.0.10
   path_provider: ^1.6.27
-
-  
-
+  image_gallery_saver: ^1.6.7
+  permission_handler: ^4.2.0+hotfix.3
+  random_string: ^2.0.1
   
  
 
