--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   cached_network_image: ^2.5.0
   wallpaper_manager: ^1.0.10
   flutter_cache_manager: ^2.1.1
-  local_auth: ^0.6.1
+  local_auth: ^0.6.3+4
   dio: ^3.0.10
   path_provider: ^1.6.27
   image_gallery_saver: ^1.6.7
