--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/wpIcon.png"
+  image_path: "assets/index.png"
 
 
 # For information on the generic Dart part of this file, see the
