--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.gowallpaper">
    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <application
-        android:label="gowallpaper"
+        android:label="GoWallpaper"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
