--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -48,19 +46,25 @@ dependencies:
   image_gallery_saver: ^1.6.7
   permission_handler: ^4.2.0+hotfix.3
   random_string: ^2.0.1
+  flutter_launcher_icons: ^0.7.5
   
  
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.8.0"
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  image_path: ../
+
 flutter_icons:
+  image_path_android: "assets/logo.png"
+  image_path_ios: "assets/logo.png"
   android: true
   ios: true
-  image_path: "assets/index.png"
-
+  adaptive_icon_background: "assets/logo.png"
+  adaptive_icon_foreground: "assets/logo.png"
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
