--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,27 +26,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  provider: ^3.1.0
-  flutter_spinkit: ^4.1.2+1
+  provider: ^5.0.0
+  flutter_spinkit: ^5.0.0
   flutter_statusbarcolor: ^0.2.3
-  firebase_auth: ^0.20.0+1
-  cloud_firestore: ^0.16.0
-  firebase_core: ^0.7.0
-  firebase_storage: ^7.0.0
+  firebase_auth: ^1.4.0
+  cloud_firestore: ^2.2.1
+  firebase_core: ^1.2.1
+  firebase_storage: ^8.1.2
   flutter_staggered_grid_view:
-  image_picker: ^0.6.7+14
-  transparent_image: ^1.0.0
+  image_picker: ^0.8.0+3
+  transparent_image: ^2.0.0
   geolocator : ^5.1.3
-  cached_network_image: ^2.5.0
+  cached_network_image: ^3.0.0
   wallpaper_manager: ^1.0.10
-  flutter_cache_manager: ^2.1.1
-  local_auth: ^0.6.3+4
-  dio: ^3.0.10
-  path_provider: ^1.6.27
+  flutter_cache_manager: ^3.1.1
+  local_auth: ^1.1.6
+  dio: ^4.0.0
+  path_provider: ^2.0.2
   image_gallery_saver: ^1.6.7
   permission_handler: ^4.2.0+hotfix.3
   random_string: ^2.0.1
-  flutter_launcher_icons: ^0.7.5
+  flutter_launcher_icons: ^0.9.0
+  gradient_text: ^1.0.2
   
  
 
